# research-dvrf

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  README.md  implementation-details.md
apps/: CMakeLists.txt
apps/benchmark_dkg/: CMakeLists.txt
apps/benchmark_dkg/src/: app_builds.hpp  main.cpp
apps/benchmark_threshold_signing/: CMakeLists.txt
apps/benchmark_threshold_signing/src/: app_builds.hpp  main.cpp
apps/client_server/client/: CMakeLists.txt  app_builds.hpp  client.hpp  main.cpp
apps/client_server/server/: CMakeLists.txt  main.cpp  server.hpp
apps/network/: CMakeLists.txt
apps/network/src/: main.cpp
apps/random_beacon/: CMakeLists.txt
apps/random_beacon/src/: app_build.hpp  main.cpp
cmake_dep/: Findsodium.cmake
lib/: CMakeLists.txt
lib/benchmarks/: CMakeLists.txt
lib/benchmarks/src/: ddh_benchmarks.cpp  dfinity_benchmarks.cpp  glow_benchmarks.cpp
lib/include/: base_dkg.hpp  bls_dkg.hpp  committee.hpp  committee_impl.hpp  committee_manager.hpp  committee_manager_impl.hpp  complaint_managers.hpp  crypto_mcl.hpp  crypto_relic.hpp  crypto_sodium.hpp  ddh_dvrf.hpp  dfinity_dvrf.hpp  ecdsa.hpp  event_observer.hpp  glow_dkg.hpp  glow_dvrf.hpp  graph.hpp  group_signature_manager.hpp  guard.hpp  localnode.hpp  logger.hpp  messages.hpp  network.hpp  networknode.hpp  node.hpp  node_impl.hpp  processorIo.hpp  queue.hpp  rbc.hpp  rbcnode.hpp  scheduler.hpp  sha256.hpp  sha3_512.hpp  sha512.hpp  simplenode.hpp  threadpool.hpp
lib/proto/: consensus.proto
lib/src/: complaint_managers.cpp  crypto_mcl.cpp  crypto_relic.cpp  crypto_sodium.cpp  logger.cpp  network.cpp  rbc.cpp  scheduler.cpp
lib/test/: CMakeLists.txt
lib/test/src/: ddh_test.cpp  dfinity_test.cpp  general_tests.cpp  glow_test.cpp  graph_tests.cpp  rbc_tests.cpp  test_builders.hpp
scripts/: benchmark_functions.sh  code-coverage-generate-gcov.sh  code-coverage-generate-llvm.sh  curve_type.sh
